Fix issue where the span height is too tall in Hour and minute views. Fix issue where only 12 hours were displayed in Hour view, rather than 24.

--- a/src/css/datetimepicker.css
+++ b/src/css/datetimepicker.css
@@ -267,7 +267,7 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
-.datetimepicker .datetimepicker-hours span {
+.datetimepicker span.hour {
   height: 26px;
   line-height: 26px;
 }
@@ -280,7 +280,7 @@
   margin-bottom: inherit;
   line-height: 30px;
 }
-.datetimepicker .datetimepicker-minutes span {
+.datetimepicker span.minute {
   height: 26px;
   line-height: 26px;
 }
